--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.67.0",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@sparticuz/chromium": "^141.0.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.76.1",
     "axios": "^1.13.0",
     "cheerio": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "linkedom": "^0.18.12",
     "next": "16.0.0",
     "openai": "^6.7.0",
@@ -22,7 +26,8 @@
     "puppeteer": "^24.27.0",
     "puppeteer-core": "^24.27.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
